# SEG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ast.h  codegen.h  lexer.h  parser.h  symbol.h  token.h  type.h
src/: ast.c  codegen.c  lexer.c  main.c  parser.c  symbol.c  token.c
tests/: test.seg  test1.seg  test2.seg  test3.seg  test4.seg  test5.seg  test6.seg  test7.seg  test8.seg  test9.seg
